# deploy_machine_learning_model

./: .gitmodules  LICENSE  Makefile  README.md  mlflow.db  pyproject.toml
01-intro/.ipynb_checkpoints/: taxi_time_duration_prediction-checkpoint.ipynb
02-experiment-tracking/: 1_taxi_time_duration_prediction.ipynb  2_taxi_model_model_experiments.ipynb  mlflow.db  taxi_time_duration_prediction.ipynb
02-experiment-tracking/.ipynb_checkpoints/: 1_taxi_time_duration_prediction-checkpoint.ipynb  taxi_time_duration_prediction-Copy1-checkpoint.ipynb  taxi_time_duration_prediction-checkpoint.ipynb
02-experiment-tracking/mlruns/0/: meta.yaml
02-experiment-tracking/mlruns/2/2a3023ac5e1a4b5bb45e0c9796be7ee6/artifacts/: feature_importance_weight.json
02-experiment-tracking/mlruns/2/2a3023ac5e1a4b5bb45e0c9796be7ee6/artifacts/model/: MLmodel  model.xgb
02-experiment-tracking/mlruns/2/426977b423c448afa04ccd63f1f850ac/artifacts/models_mlflow/: MLmodel  conda.yaml  python_env.yaml
02-experiment-tracking/mlruns/2/53e9be922bb74db4b39cd469c3a882f8/artifacts/models_mlflow/: MLmodel  requirements.txt
02-experiment-tracking/src_scenario/: backend.db  mlflow.db  scenario_1.ipynb  scenario_2.ipynb  scenario_3.ipynb
02-experiment-tracking/src_scenario/artifacts_local/1/7705ec160996449f9bee9d131d432703/artifacts/models/: MLmodel  conda.yaml  model.pkl  requirements.txt
